objects/EUR_ISP_Settlement_Line__c.object
<CustomObject>
    <description>In use for iSpend</description>
    <fields>
        <fullName>EUR_ISP_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Dirty_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Dirty Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Settlement__c</fullName>
        <label>Settlement</label>
        <referenceTo>EUR_ISP_Settlement__c</referenceTo>
        <relationshipLabel>Settlement Lines (EU)</relationshipLabel>
        <relationshipName>Settlement_Lines_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Activity__c</fullName>
        <label>Spend Activity</label>
        <referenceTo>EUR_ISP_Spend_Activity__c</referenceTo>
        <relationshipLabel>Settlement Lines (EU)</relationshipLabel>
        <relationshipName>Settlement_Lines_EU</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Item_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spend Item Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_ISP_Spend_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Spend Item</label>
        <referenceTo>EUR_ISP_Spend_Item__c</referenceTo>
        <relationshipLabel>Settlement Lines (EU)</relationshipLabel>
        <relationshipName>Settlement_Lines_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Settlement Line (EU)</label>
    <nameField>
        <displayFormat>SL-{00000000}</displayFormat>
        <label>Settlement Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Lines (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_ISP_DE_Settlement_Line</fullName>
        <active>true</active>
        <label>DE Settlement Line</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ISP_iSpend_Settlement_Line</fullName>
        <active>true</active>
        <label>iSpend Settlement Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>